--- a/JobPortal.WebApp/Views/Account/Register.cshtml
+++ b/JobPortal.WebApp/Views/Account/Register.cshtml
@@ -59,7 +59,7 @@
         <input asp-for="Address" type="text" class="form-control" autocomplete="" aria-required="true" placeholder="Enter your address" />
         <span asp-validation-for="Address" class="text-danger"></span>
     </div>
-    <div class="mb-3">
+    @*<div class="mb-3">
         <div class="form-check">
             <input class="form-check-input" type="checkbox" id="terms-conditions" name="terms" />
             <label class="form-check-label" for="terms-conditions">
@@ -67,7 +67,7 @@
                 <a href="javascript:void(0);">privacy policy & terms</a>
             </label>
         </div>
-    </div>
+    </div>*@
     <button id="registerSubmit" type="submit" class="btn btn-primary d-grid w-100">Sign up</button>
 </form>
 
