--- a/JobPortal.WebApp/Views/Blog/Detail.cshtml
+++ b/JobPortal.WebApp/Views/Blog/Detail.cshtml
@@ -51,6 +51,7 @@
                                 <ul>
                                     <li><a href="#"><span class="lnr lnr-heart"></span>	4 likes</a></li>
                                     <li><a href="#"><span class="lnr lnr-bubble"></span> 06 Comments</a></li>
+                                    <li><a href="#"><span class="lnr lnr-eye"></span> @Model.Popular Views</a></li>
                                 </ul>
                             </div>
                             <div class="social-wrap col-lg-6">
