--- a/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_SidebarPartial.cshtml
@@ -115,7 +115,7 @@
                     <a href="/blog/@blog.Slug"><h4>@blog.Title</h4></a>
                     <div class="meta justify-content-between d-flex">
                         <p>@GetTimeAgo(blog.CreateDate)</p>
-                        @*<p><span class="lnr lnr-heart"></span>06 <span class="lnr lnr-bubble"></span>02</p>*@
+                        <p><span class="lnr lnr-eye"></span> @blog.Popular</p>
                     </div>
                 </div>
             }
