--- a/JobPortal.WebApp/Views/Employer/RegisterToEmployer.cshtml
+++ b/JobPortal.WebApp/Views/Employer/RegisterToEmployer.cshtml
@@ -1,4 +1,4 @@
-﻿@model JobPortal.Data.ViewModel.UpdateEmployerViewModel
+﻿@model JobPortal.Data.ViewModel.RegisterEmployerViewModel
 
 @{
     Layout = "_Layout";
@@ -28,10 +28,10 @@
             <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 style="text-align: center" class="card-title">Application for approval to become an employer</h4>
+                        <h4 style="text-align: center" class="card-title">Register to become an employer</h4>
                         <br />
                         <div class="col-md-4i">
-                            <form asp-action="Register" enctype="multipart/form-data" id="form">
+                            <form asp-action="RegisterToEmployer" enctype="multipart/form-data" id="form">
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div class="form-group">
@@ -56,6 +56,16 @@
                                         </div>
                                     </div>
                                     <div class="col-md-4">
+                                        <div class="form-group">
+                                            <label asp-for="Password" class="control-label"></label><span class="text-danger">*</span>
+                                            <input asp-for="Password" class="form-control" />
+                                            <span asp-validation-for="Password" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <label asp-for="ConfirmPassword" class="control-label"></label><span class="text-danger">*</span>
+                                            <input asp-for="ConfirmPassword" class="form-control" />
+                                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                                        </div>
                                         <div class="form-group">
                                             <label asp-for="FullName" class="control-label"></label><span class="text-danger">*</span>
                                             <input asp-for="FullName" class="form-control" />
@@ -120,7 +130,7 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-
+    
     <script>
         $(document).ready(function () {
             $('#imgInp').change(function (evt) {
@@ -135,11 +145,11 @@
             });
         });
     </script>
-
+    
     <script>
-      var quill = new Quill('#editor', {
-        theme: 'snow'
-      });
+        var quill = new Quill('#editor', {
+            theme: 'snow'
+        });
     </script>
 
     <script>
@@ -154,23 +164,27 @@
             }
             Swal.fire({
                 title: 'Register as an employer?',
-                text: "Are you sure you want to register as an employer?",
+                text: "Are you sure you want to register?",
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
                 confirmButtonText: 'Confirm'
             }).then((result) => {
                 if (result.isConfirmed) {
-                    $("#form").submit();
                     Swal.fire(
                         'Success!',
-                        '',
+                        'Your account has been successfully created. Please wait for confirmation to become an employer.',
                         'success'
-                    )
+                    ).then((confirmResult) => {
+                        if (confirmResult.isConfirmed) {
+                            $("#form").submit();
+                        }
+                    });
                 }
-            })
+            });
         }
     </script>
+
 
     <script>
         $(document).ready(function () {
