--- a/JobPortal.WebApp/Views/Shared/Components/Category/Default.cshtml
+++ b/JobPortal.WebApp/Views/Shared/Components/Category/Default.cshtml
@@ -5,9 +5,24 @@
     {
         <div class="col-lg-3 col-md-6">
             <div class="single-feature">
-                <h4>@category.Name</h4>
+                @if (category.Name == "Employer")
+                {
+                    <h4><strong><span class="lnr lnr-users"></span> @category.Name</strong></h4>
+                }
+                else if (category.Name == "Title")
+                {
+                    <h4><strong><span class="lnr lnr-book"></span> @category.Name</strong></h4>
+                }
+                else if (category.Name == "Skill")
+                {
+                    <h4><strong><span class="lnr lnr-tag"></span> @category.Name</strong></h4>
+                }
+                else if (category.Name == "Province")
+                {
+                    <h4><strong><span class="lnr lnr-map-marker"></span> @category.Name</strong></h4>
+                }
                 <hr />
-                <p>@category.Description</p>
+                <p style="margin: 10px">@category.Description</p>
             </div>
         </div>
     }
