--- a/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
@@ -413,7 +413,7 @@
                                         </td>
                                     </tr>
                                     <tr>
-                                        <th></th>
+                                        <th>Applicant</th>
                                         <th>Job</th>
                                         <th>Certificate</th>
                                         <th>Major</th>
@@ -421,11 +421,10 @@
                                         <th>GPA</th>
                                         <th>Phone</th>
                                         <th>Email</th>
+                                        <th>CV</th>
                                     </tr>
                                     <tr class="targetfields">
-                                        <td>
-                                            <img src="https://localhost:7211/images/employers/@CV.EmployerLogo" alt="@CV.JobName" style="width: 100px;">
-                                        </td>
+                                        <td>@CV.UserName</td>
                                         <td>@CV.JobName</td>
                                         <td>@CV.Certificate</td>
                                         <td>@CV.Major</td>
@@ -433,6 +432,35 @@
                                         <td>@CV.GPA</td>
                                         <td>@CV.CVPhone</td>
                                         <td>@CV.CVEmail</td>
+                                        <td>
+                                            <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#viewCVModal">View CV</a>
+
+                                            <!-- Modal -->
+                                            <div class="modal fade" id="viewCVModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                                <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <h5 class="modal-title" id="exampleModalLabel">CV: @CV.UserName</h5>
+                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <span aria-hidden="true">&times;</span>
+                                                            </button>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div class="row">
+                                                                <div class="col-md-12">
+                                                                    <div class="form-group">
+                                                                        <img src="https://localhost:7211/images/cvs/@CV.CVImage" alt="@CV.JobName" style="width: 750px; height: 1000px">
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
                                     </tr>
                                 }
                             </tbody>
