--- a/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Apply/Index.cshtml
@@ -12,7 +12,7 @@
 }
 
 <!-- CKEditor -->
-<script src="//cdn.ckeditor.com/4.21.0/standard/ckeditor.js"></script>
+@*<script src="//cdn.ckeditor.com/4.21.0/standard/ckeditor.js"></script>*@
 <head>
     <style>
         .table thead tr {
@@ -89,7 +89,12 @@
             margin-top: 10px;
         }
 
+        .modal-open {
+    overflow: hidden;
+}
+
         .modal-title {
+            color: white;
             font-weight: bold;
         }
 
@@ -225,7 +230,7 @@
                         </li>
                     </ul>
                     <br />
-                    <div class="table-responsive">
+                    <div class="table-responsive" data-backdrop="static">
                         <table class="table table-bordered">
                             <thead>
                                 <tr>
@@ -265,19 +270,19 @@
                                                 switch (CV.CVStatus)
                                                 {
                                                     case 0:
-                                                        <span class="text-danger"><b>Denied</b></span>
+                                                                <span class="text-danger"><b>Denied</b></span>
                                                         break;
                                                     case 1:
-                                                        <span class="text-info"><b>Waiting</b></span>
+                                                                <span class="text-info"><b>Waiting</b></span>
                                                         break;
                                                     case 2:
-                                                        <span class="text-success"><b>Accepted</b></span>
+                                                                <span class="text-success"><b>Accepted</b></span>
                                                         break;
                                                     case 3:
-                                                        <span class="text-success"><b>Accepted</b></span>
+                                                                <span class="text-success"><b>Accepted</b></span>
                                                         break;
                                                     default:
-                                                        <span class="text-success"></span>
+                                                                <span class="text-success"></span>
                                                         break;
                                                 }
                                             }
@@ -292,12 +297,12 @@
                                             {
                                                 <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#feedbackModal">Feedback</a>
                                                 <!-- Modal -->
-                                                <div class="modal fade" id="feedbackModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                                    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+                                                <div class="modal fade" id="feedbackModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-backdrop="static">
+                                                    <div class="modal-dialog" role="document">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
                                                                 <h5 class="modal-title" id="exampleModalLabel">Provide Feedback</h5>
-                                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <button type="button" style="background-color:red" class="close" data-dismiss="modal" aria-label="Close">
                                                                     <span aria-hidden="true">&times;</span>
                                                                 </button>
                                                             </div>
@@ -362,12 +367,12 @@
                                                 <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#viewFeedbackModal-@CV.CVId">View Feedback</a>
 
                                                 <!-- Modal -->
-                                                <div class="modal fade" id="viewFeedbackModal-@CV.CVId" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                                        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                                <div class="modal fade" id="viewFeedbackModal-@CV.CVId" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static">
+                                                    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
                                                         <div class="modal-content">
                                                             <div class="modal-header">
                                                                 <h5 class="modal-title" id="exampleModalLabel">Employer Feedback</h5>
-                                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                                <button type="button" style="background-color:red" class="close" data-dismiss="modal" aria-label="Close">
                                                                     <span aria-hidden="true">&times;</span>
                                                                 </button>
                                                             </div>
@@ -435,16 +440,16 @@
                                         <td>@CV.GPA</td>
                                         <td>@CV.CVPhone</td>
                                         <td>@CV.CVEmail</td>
+
                                         <td style="text-align: center">
                                             <a class="btn btn-primary" href="#" data-toggle="modal" data-target="#viewCVModal-@CV.CVId">View CV</a>
-
                                             <!-- Modal -->
                                             <div class="modal fade" id="viewCVModal-@CV.CVId" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                                 <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
                                                             <h5 class="modal-title" id="exampleModalLabel">CV: @CV.UserName</h5>
-                                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                            <button type="button" style="background-color:red" class="close" data-dismiss="modal" aria-label="Close">
                                                                 <span aria-hidden="true">&times;</span>
                                                             </button>
                                                         </div>
@@ -495,7 +500,12 @@
 </div>
 
 @section Scripts {
-    <script>
+    
+        
+    
+
+
+   @* <script>
         $(document).ready(function () {
             //Fixing jQuery Click Events for the iPad
             var ua = navigator.userAgent,
@@ -509,7 +519,35 @@
                 e.stopPropagation();
             });
         });
+    </script>*@
+
+    @*<script>
+        $(document).ready(function () {
+            $('#feedbackModal').on('show.bs.modal', function () {
+                $('body').addClass('modal-open');
+            });
+
+            $('#feedbackModal').on('hidden.bs.modal', function () {
+                $('body').removeClass('modal-open');
+            });
+        });
+    </script>*@
+
+    <script>
+        $(document).ready(function () {
+            $('#feedbackModal, #viewFeedbackModal').on('show.bs.modal', function () {
+                $('body').addClass('modal-open');
+                $(this).on('click', function (e) {
+                    e.stopPropagation();
+                });
+            });
+
+            $('#feedbackModal, #viewFeedbackModal').on('hidden.bs.modal', function () {
+                $('body').removeClass('modal-open');
+            });
+        });
     </script>
+
     <script>
         function onAccept(id) {
             Swal.fire({
@@ -549,6 +587,7 @@
                 }
             })
         }
+
         function onFeedback() {
             Swal.fire({
                 title: 'Provide feedback?',
@@ -568,6 +607,37 @@
                 }
             })
         }
+
+
+        //cái này là popup chỉ xuất hiện khi tắt hộp thoại
+
+        //function onFeedback() {
+        //    $('#feedbackModal').modal('hide').on('hidden.bs.modal', function (e) {
+        //        Swal.fire({
+        //            title: 'Provide feedback?',
+        //            text: "Are you sure to provide this feedback?",
+        //            showCancelButton: true,
+        //            confirmButtonColor: '#3085d6',
+        //            cancelButtonColor: '#d33',
+        //            confirmButtonText: 'Confirm'
+        //        }).then((result) => {
+        //            if (result.isConfirmed) {
+        //                $("#feedbackForm").submit();
+        //                Swal.fire(
+        //                    'Success!',
+        //                    '',
+        //                    'success'
+        //                )
+        //            }
+        //        });
+        //    });
+        //}
+
+       
+
+
+        
+
     </script>
 
     <script>CKEDITOR.replace('CKEditor');</script>
