--- a/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLayout.cshtml
+++ b/JobPortal.WebApp/Areas/Employer/Views/Shared/_EmployerLayout.cshtml
@@ -68,9 +68,9 @@
 
 
     <!-- Tick box-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+   @* <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js" integrity="sha512-2ImtlRlf2VVmiGZsjm9bEyhjGW4dU7B6TNwh/hx/iSByxNENtj3WVE6o/9Lj4TJeVXPi4bnOIMXFIJJAeufa0A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" integrity="sha512-nMNlpuaDPrqlEls3IX/Q56H36qvBASwb3ipuo3MxeWbsQB1881ox0cRv7UPTgBlriqoynt35KjEwgGUeUXIPnw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    *@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/css/multi-select-tag.css">
     <script src="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/js/multi-select-tag.js"></script>
     
@@ -79,6 +79,15 @@
     <script src="~/assets/admin/assets/js/config.js"></script>
     <!-- CKEditor -->
     <script type="text/javascript" src="~/assets/ckeditor/ckeditor.js"></script>
+
+
+
+
+
+
+
+    <script src="~/assets/user/js/vendor/bootstrap.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
@@ -285,7 +294,7 @@
     <script src="~/assets/admin/assets/vendor/libs/jquery/jquery.js"></script>
     <script src="~/assets/admin/assets/vendor/libs/popper/popper.js"></script>
     <script src="~/assets/admin/assets/vendor/js/bootstrap.js"></script>
-    <script src="~/assets/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+    @*<script src="~/assets/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>*@
 
     <script src="~/assets/admin/assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
