--- a/JobPortal.WebApp/Views/Shared/_Layout.cshtml
+++ b/JobPortal.WebApp/Views/Shared/_Layout.cshtml
@@ -38,8 +38,8 @@
 	<link rel="stylesheet" href="~/assets/user/css/owl.carousel.css">
 	<link rel="stylesheet" href="~/assets/user/css/main.css">
 	<!-- Select2 -->
-	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/css/select2.min.css" rel="stylesheet" />
-	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/js/select2.min.js"></script>
+	@*<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/css/select2.min.css" rel="stylesheet" />
+	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0/dist/js/select2.min.js"></script>*@
 	<!-- CKEditor -->
 	<script type="text/javascript" src="~/assets/ckeditor/ckeditor.js"></script>
 	<!-- Button -->
@@ -216,7 +216,7 @@
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	<!-- Client -->
-	<script src="~/assets/js/main.js"></script>
+	@*<script src="~/assets/js/main.js"></script>*@
 	<script src="~/assets/js/mixitup.min.js"></script>
 	<!-- Popup -->
 	<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
